--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 		<div class="About_contents">
 			<div class="content_left">
 				<div class="img_wrapper_box" data-aos="fade-right" data-aos-easing="ease-in-out" data-aos-duration="1000">
-					<img src="img/md eyasin.jpg" alt="eyasin_photo" />
+					<img src="img/md_eyasin.jpg" alt="eyasin_photo" />
 				</div>
 			</div>
 			<div class="content_right">
@@ -540,3 +540,4 @@
 
 
 </html>
+
