--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <span>Eyasin Arafat</span>
                 </h1>
                 <p>Front End Web Designer!</p>
-                <a class="btn-header" href="#">download resume</a>
+                <a class="btn-header" target="_blank" href="https://drive.google.com/file/d/1WJRPEy1NC4xmzz4mDAI3d49UZs07bV8M/view?usp=sharing">download resume</a>
             </div>
             <div class="HeaderImage" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="1000">
                 <img src="img/hero-image.svg" alt="SliderSvg">
@@ -540,4 +540,5 @@
 
 
 </html>
+
 
